# casechange

./: Readme.md  pyproject.toml
casechange/: casechange.py  cli.py
lowercase/: lowercase.py
tests/: test_casechange.py  test_lowercase.py
