[tool.poetry]
name = "casechange"
version = "0.1.0"
description = ""
authors = ["Adam Peacock <adam@thepeacock.net>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lowercase = "casechange.cli:to_lower"
uppercase = "casechange.cli:to_upper"